--- a/TranslationReg/Style/style.less
+++ b/TranslationReg/Style/style.less
@@ -107,6 +107,11 @@ footer {
     }
 }
 
+//--------------------Стили для таблиц------------------------------------
+.tables{
+    padding: 0;
+}
+
 //--------------------Стили заголовков для таблиц-------------------------
 .titles {
     display: flex;
@@ -172,9 +177,8 @@ footer {
     }
 }
 
-.action-btn {
+.buttons-container {
     margin: auto;
-    width: 400px;
 
     > a {
         margin-bottom: 0;
@@ -353,5 +357,5 @@ footer {
 
 .filter-active {
     background: #241717;
-    color: white;
+    color: white !important;
 }
