--- a/TranslationReg/Views/WorkTypes/List.cshtml
+++ b/TranslationReg/Views/WorkTypes/List.cshtml
@@ -19,10 +19,12 @@
         <div class="col-md-4">@Html.DisplayFor(modelItem => workType.Description)</div>
         <div class="col-md-2">@Html.DisplayFor(modelItem => workType.UnitOfMeasure.Name)</div>
         <div class="col-md-3">
+            <div class="buttons-container">
             <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#workType@(workType.Id)"
                href="/WorkTypes/Edit/@workType.Id" class="btn btn-primary editBtn">Редактировать</a>
             <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#workType@(workType.Id)"
                href="/WorkTypes/Delete/@workType.Id" class="btn btn-danger deleteBtn" data-dialog-title="Удаление записи">Удалить</a>
+            </div>
         </div>
     </div>
         <div id="workType@(workType.Id)" class="dynamicBlock dynamicItem"></div>
