--- a/TranslationReg/Views/Documents/List.cshtml
+++ b/TranslationReg/Views/Documents/List.cshtml
@@ -40,9 +40,11 @@
             }
         </div>
         <div class="col-md-3">
-            @Html.ActionLink("Редактировать", "Edit", new { id = item.Id }, htmlAttributes: new { @class = "btn btn-primary" })
-            @Html.ActionLink("Подробно", "DocAndStages", new { id = item.Id }, htmlAttributes: new { @class = "btn btn-info" })
-            @Html.ActionLink("Удалить", "Delete", new { id = item.Id }, htmlAttributes: new { @class = "btn btn-danger" })
+            <div class="buttons-container">
+                @Html.ActionLink("Редактировать", "Edit", new { id = item.Id }, htmlAttributes: new { @class = "btn btn-primary" })
+                @Html.ActionLink("Подробно", "DocAndStages", new { id = item.Id }, htmlAttributes: new { @class = "btn btn-info" })
+                @Html.ActionLink("Удалить", "Delete", new { id = item.Id }, htmlAttributes: new { @class = "btn btn-danger" })
+            </div>
         </div>
     </div>
 }
