--- a/TranslationReg/Views/LanguagePairs/List.cshtml
+++ b/TranslationReg/Views/LanguagePairs/List.cshtml
@@ -8,7 +8,7 @@
 </a>
 <div id="addLanguagePairForm" class="dynamicBlock"></div>
 
-<div class="container ">
+<div>
     <div class="titles">
         <div class="col-md-3">@Html.Label("Язык оригинала")</div>
         <div class="col-md-3">@Html.Label("Язык перевода")</div>
@@ -22,7 +22,7 @@
             <div class="col-md-3">@Html.DisplayFor(modelItem => item.TranslationLanguage.Name)</div>
             <div class="col-md-3">@Html.DisplayFor(modelItem => item.Name)</div>
             <div class="col-md-3">
-                <div class="action-btn">
+                <div class="buttons-container">
                     <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#languagePair@(item.Id)"
                        href="/LanguagePairs/Edit/@item.Id" class="btn btn-primary editBtn">Редактировать</a>
                     <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#languagePair@(item.Id)"
