--- a/TranslationReg/Views/Projects/Documents.cshtml
+++ b/TranslationReg/Views/Projects/Documents.cshtml
@@ -7,7 +7,7 @@
     </a>
     <div id="addDocumentForm" class="dynamicBlock"></div>
 
-    <div class="container">
+    <div class="">
         <div class="titles">
             <div class="col-md-3">Документы проекта</div>
             <div class="col-md-2">Владелец</div>
@@ -23,24 +23,22 @@
                     @doc.Owner.Name
                 </div>
                 <div class="col-md-7">
-                    <div class="col-md-3">
+                    <div class="buttons-container">
                         @Html.ActionLink("Скачать оригинал", "Download", "Documents", new { @filepath = doc.OriginalFile.Path }, htmlAttributes: new { @class = "btn btn-info" })
-                    </div>
-                    <div class="col-md-3">
+
                         @if (doc.FinalFile != null && !String.IsNullOrWhiteSpace(doc.FinalFile.Path))
                         {
                             @Html.ActionLink("Скачать готовый", "Download", "Documents", new { @filepath = doc.FinalFile.Path }, htmlAttributes: new { @class = "btn btn-info" })
-                        } else
-                        {
-                            <button class="btn disabled-btn" disabled ="disabled">Скачать готовый</button>
                         }
-                    </div>
-                    <div class="col-md-3">
+                        else
+                        {
+                            <a href="#" class="btn disabled-btn" disabled="disabled">Скачать готовый</a>
+                        }
                         <a class="btn btn-primary" href="/Documents/Edit/@doc.Id">Редактировать</a>
-                    </div>
-                    <div class="col-md-3">
                         <a class="btn btn-danger deleteBtn" href="/Documents/Delete/@doc.Id">Удалить</a>
                     </div>
+
+
                 </div>
             </div>
         }
