--- a/TranslationReg/Views/UnitOfMeasure/List.cshtml
+++ b/TranslationReg/Views/UnitOfMeasure/List.cshtml
@@ -18,10 +18,12 @@
             <div class="col-md-3">@Html.DisplayFor(modelItem => unitOfMeasure.Name)</div>
             <div class="col-md-6">@Html.DisplayFor(modelItem => unitOfMeasure.Description)</div>
             <div class="col-md-3">
-                <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#unit@(unitOfMeasure.Id)"
-                   href="/UnitOfMeasure/Edit/@unitOfMeasure.Id" class="btn btn-primary editBtn">Редактировать</a>
-                <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#unit@(unitOfMeasure.Id)"
-                   href="/UnitOfMeasure/Delete/@unitOfMeasure.Id" class="btn btn-danger deleteBtn" data-dialog-title="Удаление записи">Удалить</a>
+                <div class="buttons-container">
+                    <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#unit@(unitOfMeasure.Id)"
+                       href="/UnitOfMeasure/Edit/@unitOfMeasure.Id" class="btn btn-primary editBtn">Редактировать</a>
+                    <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#unit@(unitOfMeasure.Id)"
+                       href="/UnitOfMeasure/Delete/@unitOfMeasure.Id" class="btn btn-danger deleteBtn" data-dialog-title="Удаление записи">Удалить</a>
+                </div>
             </div>
         </div>
         <div id="unit@(unitOfMeasure.Id)" class="dynamicBlock dynamicItem"></div>
