удалил лишние вьюшки, прописал название диалогового окна удаления везде

--- a/TranslationReg/Views/DocStages/Delete.cshtml
+++ b/TranslationReg/Views/DocStages/Delete.cshtml
@@ -4,38 +4,20 @@
     <h3>Вы уверены что хотите удалить данную запись?</h3>
     <div>
         <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.DocFile.Path)
-            </dt>
+            <dt>@Html.Label("Документ")</dt>
     
-            <dd>
-                @Html.DisplayFor(model => model.DocFile.Path)
-            </dd>
+            <dd>@Html.DisplayFor(model => model.Document.Name)</dd>
     
-            <dt>
-                @Html.DisplayNameFor(model => model.Document.Name)
-            </dt>
+            <dt>@Html.Label("Тип работы")</dt>
     
-            <dd>
-                @Html.DisplayFor(model => model.Document.Name)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.WorkType.Name)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.WorkType.Name)
-            </dd>
-    
+            <dd>@Html.DisplayFor(model => model.WorkType.Name)</dd>
         </dl>
     
         @using (Html.BeginForm()) {
             @Html.AntiForgeryToken()
     
             <div class="form-actions no-color">
-                <input type="submit" value="Delete" class="btn btn-default" /> |
-                @Html.ActionLink("Back to List", "Index")
+                <input type="submit" value="Удалить" class="btn btn-default" />
             </div>
         }
     </div>
