--- a/TranslationReg/Views/Projects/List.cshtml
+++ b/TranslationReg/Views/Projects/List.cshtml
@@ -26,7 +26,7 @@
                 <a href="/Projects/Edit/@project.Id" class="btn btn-primary">Редактировать</a>
                 <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#@project.Id"
                    href="/Projects/DetailsShort/@project.Id" class="btn btn-info detailsBtn">Детали</a>
-                <a data-ajax="true"
+                <a data-dialog-title="Удаление записи" 
                    href="/Projects/Delete/@project.Id" class="btn btn-danger deleteBtn">Удалить</a>
             </div>
         </div>
