--- a/TranslationReg/Views/DocStages/Item.cshtml
+++ b/TranslationReg/Views/DocStages/Item.cshtml
@@ -7,7 +7,7 @@
            href="/User_Stage/Create/@Model.Id" class="btn btn-success createBtn">Добавить работу</a>
     </div>
     <div class="col-md-4">
-        <a class="btn btn-danger deleteBtn" href="/DocStages/Delete/@Model.Id">Удалить стадию</a>
+        <a class="btn btn-danger deleteBtn" href="/DocStages/Delete/@Model.Id" data-dialog-title="Удаление записи">Удалить стадию</a>
     </div>
 </div>
 <div id="addUserStageForm@(Model.Id)" class="dynamicBlock"></div>
