--- a/TranslationReg/Views/User_Stage/Item.cshtml
+++ b/TranslationReg/Views/User_Stage/Item.cshtml
@@ -7,10 +7,11 @@
         <div class="col-md-3">@Html.DisplayFor(modelItem => Model.DocFile.Date)</div>
         <div class="col-md-3">
             <div class="buttons-container">
-                @if (Model.DocFile!=null && !String.IsNullOrWhiteSpace(Model.DocFile.Path))
+                @if (Model.DocFile != null && !String.IsNullOrWhiteSpace(Model.DocFile.Path))
                 {
                     @Html.ActionLink("Скачать", "Download", "User_Stage", new { @filepath = Model.DocFile.Path }, htmlAttributes: new { @class = "btn btn-success" })
                 }
+                <a class="btn btn-info finaliseBtn" href="/User_Stage/Finalise/@Model.Id">Финализировать</a>
                 <a class="btn btn-danger deleteBtn" href="/User_Stage/Delete/@Model.Id" data-dialog-title="Удаление записи">Удалить</a>
             </div>
         </div>
