--- a/TranslationReg/Views/LanguagePairs/List.cshtml
+++ b/TranslationReg/Views/LanguagePairs/List.cshtml
@@ -18,9 +18,24 @@
     @foreach (var item in Model)
     {
         <div class="properties">
-            <div class="col-md-3">@Html.DisplayFor(modelItem => item.OriginalLanguage.Name)</div>
-            <div class="col-md-3">@Html.DisplayFor(modelItem => item.TranslationLanguage.Name)</div>
-            <div class="col-md-3">@Html.DisplayFor(modelItem => item.Name)</div>
+            <div class="col-md-3">
+                <span>
+
+                    @Html.DisplayFor(modelItem => item.OriginalLanguage.Name)
+                </span>
+            </div>
+            <div class="col-md-3">
+                <span>
+
+                    @Html.DisplayFor(modelItem => item.TranslationLanguage.Name)
+                </span>
+            </div>
+            <div class="col-md-3">
+                <span>
+
+                    @Html.DisplayFor(modelItem => item.Name)
+                </span>
+            </div>
             <div class="col-md-3">
                 <div class="buttons-container">
                     <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#languagePair@(item.Id)"
