--- a/TranslationReg/Views/Projects/Documents.cshtml
+++ b/TranslationReg/Views/Projects/Documents.cshtml
@@ -20,7 +20,10 @@
                     <a class="titleLink" href="/Documents/DocAndStages/@doc.Id">@doc.Name</a>
                 </div>
                 <div class="col-md-2">
-                    @doc.Owner.Name
+                    <span>
+
+                        @doc.Owner.Name
+                    </span>
                 </div>
                 <div class="col-md-7">
                     <div class="buttons-container">
