--- a/TranslationReg/Style/style.less
+++ b/TranslationReg/Style/style.less
@@ -1,8 +1,8 @@
 //Main veriables
 @body-color: #EEF1F5;
 @dark-color: #241717;
-@main-fonts: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-@borders: 2px solid darkgray;
+@main-fonts: "Open Sans", Helvetica, Arial, sans-serif;
+@borders: 1px solid darkgray;
 @pcWidth: 768px;
 
 * {
@@ -118,8 +118,6 @@ footer {
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
-    border: @borders;
-    border-radius: 4px 4px 0 0;
 
     > div {
         text-align: center;
@@ -127,7 +125,6 @@ footer {
         height: 55px;
         font-size: 18px;
         line-height: 55px;
-        border-right: @borders;
 
         &:last-child {
             border-right: none;
@@ -142,16 +139,15 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    border: @borders;
-    border-collapse: collapse;
+    border-bottom: @borders;
 
     > div {
         padding: 15px 0;
         text-align: center;
         height: auto;
         font-size: 20px;
-        border-right: 2px solid darkgray;
         text-align: center;
+        display:flex;
 
         &:last-child {
             display: flex;
@@ -167,23 +163,25 @@ footer {
         }
 
         a {
+            margin:auto;
             line-height: 1.2;
         }
 
-        p {
-            margin: 0;
-            line-height: 1.2;
+        span {
+            margin:auto;
+        }
+    }
+
+    .buttons-container {
+        margin: auto;
+        align-self: center;
+        > a {
+            margin-bottom: 0;
         }
     }
 }
 
-.buttons-container {
-    margin: auto;
 
-    > a {
-        margin-bottom: 0;
-    }
-}
 //-----------------------Стили элементов таблиц----------------------------
 
 @media screen and (max-width: 479px) {
@@ -358,4 +356,48 @@ footer {
 .filter-active {
     background: #241717;
     color: white !important;
+}
+
+.download-Btn {
+    text-align: center;
+    display: inline-block;
+    position: relative;
+    text-decoration: none;
+    color: white;
+    text-transform: capitalize;
+    padding: 5px 0px;
+    width: 150px;
+    border-radius: 4px;
+    overflow: hidden;
+    transition: all .2s linear 0s;
+    background: #F28123;
+    font-size: 16px;
+
+    &:before {
+        content: "\f019";
+        font-family: FontAwesome;
+        font-size: 15px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        top: 0;
+        right: -30px;
+        width: 30px;
+        height: 100%;
+        background-color: #F28123;
+        transition: all 0.2s linear 0s;
+        text-align: center;
+    }
+
+    &:hover {
+        text-indent: -30px;
+        text-decoration: none;
+        color: white;
+
+        &:before {
+            right: 0;
+            text-indent: 0px;
+        }
+    }
 }
