--- a/TranslationReg/Views/Languages/List.cshtml
+++ b/TranslationReg/Views/Languages/List.cshtml
@@ -15,8 +15,18 @@
         @foreach (var item in Model)
         {
             <div class="properties">
-                <div class="col-md-4">@Html.DisplayFor(modelItem => item.Name)</div>
-                <div class="col-md-4">@Html.DisplayFor(modelItem => item.ShortName)</div>
+                <div class="col-md-4">
+                    <span>
+
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </span>
+                </div>
+                <div class="col-md-4">
+                    <span>
+
+                        @Html.DisplayFor(modelItem => item.ShortName)
+                    </span>
+                </div>
                 <div class="col-md-4">
                     <div class="buttons-container">
                         <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#language@(item.Id)"
