--- a/TranslationReg/Views/Projects/List.cshtml
+++ b/TranslationReg/Views/Projects/List.cshtml
@@ -4,7 +4,7 @@
    href="/Projects/Create" class="btn btn-primary createBtn">Добавить</a>
 <div id="addProj" class="dynamicBlock"></div>
 
-<div class="" id="languageEditor">
+<div class="tablesList" id="languageEditor">
     <div class="titles">
         <div class="col-md-4">@Html.Label("Название")</div>
         <div class="col-md-2">@Html.Label("Пользователь")</div>
@@ -15,22 +15,34 @@
 
     @foreach (var project in Model)
     {
-    <div class="properties">
-        <div class="col-md-4"><a class="titleLink" href="/Projects/TabPages/@(project.Id)">@project.Name</a></div>
-        <div class="col-md-2">@Html.DisplayFor(modelItem => project.Creator.Name)</div>
-        <div class="col-md-1">@Html.DisplayFor(modelItem => project.LanguagePair.Name)</div>
-        <div class="col-md-2">@Html.DisplayFor(modelItem => project.ProjectStatus.Name)</div>
-        <div class="col-md-3">
-            <div class="buttons-container">
-                <a href="/Projects/Details/@project.Id" class="btn btn-info">Открыть</a>
-                <a href="/Projects/Edit/@project.Id" class="btn btn-primary">Редактировать</a>
-                <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#@project.Id"
-                   href="/Projects/DetailsShort/@project.Id" class="btn btn-info detailsBtn">Детали</a>
-                <a data-ajax="true"
-                   href="/Projects/Delete/@project.Id" class="btn btn-danger deleteBtn">Удалить</a>
+        <div class="properties">
+            <div class="col-md-4">
+                <a class="titleLink" href="/Projects/TabPages/@(project.Id)">@project.Name</a>
+            </div>
+            <div class="col-md-2">
+                <span>
+                    @Html.DisplayFor(modelItem => project.Creator.Name)
+                </span>
+            </div>
+            <div class="col-md-1">
+                <span>
+                    @Html.DisplayFor(modelItem => project.LanguagePair.Name)
+                </span>
+            </div>
+            <div class="col-md-2">
+                <span>
+                    @Html.DisplayFor(modelItem => project.ProjectStatus.Name)
+                </span>
+            </div>
+            <div class="col-md-3">
+                <div class="buttons-container">
+                    <a href="/Projects/Details/@project.Id" class="btn btn-info">Открыть</a>
+                    <a href="/Projects/Edit/@project.Id" class="btn btn-primary">Редактировать</a>
+                    <a data-ajax="true"
+                       href="/Projects/Delete/@project.Id" class="btn btn-danger deleteBtn">Удалить</a>
+                </div>
             </div>
         </div>
-    </div>
         <div id="@(project.Id)" class="dynamicBlock"></div>
     }
 </div>
