--- a/TranslationReg/Views/WorkTypes/List.cshtml
+++ b/TranslationReg/Views/WorkTypes/List.cshtml
@@ -14,19 +14,34 @@
     </div>
     @foreach (var workType in Model)
     {
-    <div class="properties">
-        <div class="col-md-3">@Html.DisplayFor(modelItem => workType.Name)</div>
-        <div class="col-md-4">@Html.DisplayFor(modelItem => workType.Description)</div>
-        <div class="col-md-2">@Html.DisplayFor(modelItem => workType.UnitOfMeasure.Name)</div>
-        <div class="col-md-3">
-            <div class="buttons-container">
-            <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#workType@(workType.Id)"
-               href="/WorkTypes/Edit/@workType.Id" class="btn btn-primary editBtn">Редактировать</a>
-            <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#workType@(workType.Id)"
-               href="/WorkTypes/Delete/@workType.Id" class="btn btn-danger deleteBtn" data-dialog-title="Удаление записи">Удалить</a>
+        <div class="properties">
+            <div class="col-md-3">
+                <span>
+
+                    @Html.DisplayFor(modelItem => workType.Name)
+                </span>
+            </div>
+            <div class="col-md-4">
+                <span>
+
+                    @Html.DisplayFor(modelItem => workType.Description)
+                </span>
+            </div>
+            <div class="col-md-2">
+                <span>
+
+                    @Html.DisplayFor(modelItem => workType.UnitOfMeasure.Name)
+                </span>
+            </div>
+            <div class="col-md-3">
+                <div class="buttons-container">
+                    <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#workType@(workType.Id)"
+                       href="/WorkTypes/Edit/@workType.Id" class="btn btn-primary editBtn">Редактировать</a>
+                    <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#workType@(workType.Id)"
+                       href="/WorkTypes/Delete/@workType.Id" class="btn btn-danger deleteBtn" data-dialog-title="Удаление записи">Удалить</a>
+                </div>
             </div>
         </div>
-    </div>
         <div id="workType@(workType.Id)" class="dynamicBlock dynamicItem"></div>
     }
 </div>
