--- a/TranslationReg/Views/Documents/Edit.cshtml
+++ b/TranslationReg/Views/Documents/Edit.cshtml
@@ -7,10 +7,10 @@
 <h2>Редактирование документа</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Documents", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    
+
 <div class="form-horizontal">
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -18,7 +18,6 @@
     @Html.HiddenFor(model => model.OwnerId)
     @Html.HiddenFor(model => model.OriginalFileId)
     @Html.HiddenFor(model => model.FinalFileId)
-
     <div class="form-group">
         @Html.LabelFor(model => model.Owner, "Создатель", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
@@ -31,6 +30,13 @@
         <div class="col-md-10">
             @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", requred = "required" } })
             @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.Label("Файл оригинала", new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            <input type="file" name="newOriginalFile" />
         </div>
     </div>
 
