--- a/TranslationReg/Views/Documents/DocAndStages.cshtml
+++ b/TranslationReg/Views/Documents/DocAndStages.cshtml
@@ -14,7 +14,7 @@
             Скачать оргигинал
         </dt>
         <dd>
-            <a href="@Url.Action("Download", "Documents", new { @filepath = Model.OriginalFile.Path })" class="glyphicon glyphicon-download"></a>
+            <a href="@Url.Action("Download", "Documents", new { @filepath = Model.OriginalFile.Path })" class="download-Btn">Скачать</a>
         </dd>
 
         @if (Model.FinalFile != null)
@@ -23,7 +23,7 @@
                 Скачать перевод
             </dt>
             <dd>
-                <a href="@Url.Action("Download", "Documents", new { @filepath = Model.FinalFile.Path })" class="glyphicon glyphicon-download"></a>
+                <a href="@Url.Action("Download", "Documents", new { @filepath = Model.FinalFile.Path })" class="download-Btn">Скачать</a>
             </dd>
         }
     </dl>
@@ -32,7 +32,7 @@
        href="/DocStages/Create/@Model.Id" class="btn btn-primary createBtn">Добавить стадию</a>
     <div id="addDocStageForm" class="dynamicBlock"></div>
 
-    @Html.Partial("../DocStages/List", Model.Stages.ToList());
+    @Html.Partial("../DocStages/List", Model.Stages.ToList())
 </div>
 
 @section scripts {
