--- a/TranslationReg/Views/User_Stage/Item.cshtml
+++ b/TranslationReg/Views/User_Stage/Item.cshtml
@@ -2,16 +2,28 @@
 
 <div>
     <div class="properties">
-        <div class="col-md-3">@Html.DisplayFor(modelItem => Model.User.Name)</div>
-        <div class="col-md-3">@Html.DisplayFor(modelItem => Model.Amount)</div>
-        <div class="col-md-3">@Html.DisplayFor(modelItem => Model.DocFile.Date)</div>
-        <div class="col-md-3">
+        <div class="col-md-2">
+            <span>
+                @Html.DisplayFor(modelItem => Model.User.Name)
+            </span>
+        </div>
+        <div class="col-md-2">
+            <span>
+                @Html.DisplayFor(modelItem => Model.Amount)
+            </span>
+        </div>
+        <div class="col-md-4">
+            <span>
+                @Html.DisplayFor(modelItem => Model.DocFile.Date)
+            </span>
+        </div>
+        <div class="col-md-4">
             <div class="buttons-container">
                 @if (Model.DocFile != null && !String.IsNullOrWhiteSpace(Model.DocFile.Path))
                 {
-                    @Html.ActionLink("Скачать", "Download", "User_Stage", new { @filepath = Model.DocFile.Path }, htmlAttributes: new { @class = "btn btn-success" })
+                    @Html.ActionLink("Скачать", "Download", "User_Stage", new { @filepath = Model.DocFile.Path }, htmlAttributes: new { @class = "btn btn-primary" })
                 }
-                <a class="btn btn-info finaliseBtn" href="/User_Stage/Finalise/@Model.Id">Финализировать</a>
+                <a class="btn btn-info finaliseBtn" href="/User_Stage/Finalise/@Model.Id">Отметить финальным</a>
                 <a class="btn btn-danger deleteBtn" href="/User_Stage/Delete/@Model.Id" data-dialog-title="Удаление записи">Удалить</a>
             </div>
         </div>
