--- a/TranslationReg/Views/User_Stage/List.cshtml
+++ b/TranslationReg/Views/User_Stage/List.cshtml
@@ -2,7 +2,7 @@
 <div>
     <div class="titles">
         <div class="col-md-2">Пользователь</div>
-        <div class="col-md-2">Количество (слов)?</div>
+        <div class="col-md-2">Количество</div>
         <div class="col-md-4">Дата загрузки</div>
         <div class="col-md-4">Команды</div>
     </div>
