1) правка багов неработающих вьюх создания 2) нормальная работа с обновленной БД (обязательные даты у проектов, доков, работ, убрал счет слов с проектов) 3) обязательный выбор файлов. нельзя отправить форму пока не выберешь

--- a/TranslationReg/Views/Documents/Edit.cshtml
+++ b/TranslationReg/Views/Documents/Edit.cshtml
@@ -18,6 +18,7 @@
     @Html.HiddenFor(model => model.OwnerId)
     @Html.HiddenFor(model => model.OriginalFileId)
     @Html.HiddenFor(model => model.FinalFileId)
+    @Html.HiddenFor(model => model.Date)
     <div class="form-group">
         @Html.LabelFor(model => model.Owner, "Создатель", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
