--- a/TranslationReg/Views/Projects/Documents.cshtml
+++ b/TranslationReg/Views/Projects/Documents.cshtml
@@ -2,7 +2,7 @@
 
 <div>
     <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#addDocumentForm"
-       href="/Documents/Create" class="btn btn-primary createBtn" role="button">
+       href="/Documents/CreateProjectDoc/@Model.Id" class="btn btn-primary createBtn" role="button">
         Добавить
     </a>
     <div id="addDocumentForm" class="dynamicBlock"></div>
