--- a/TranslationReg/Views/Documents/CreateProjectDoc.cshtml
+++ b/TranslationReg/Views/Documents/CreateProjectDoc.cshtml
@@ -1,32 +1,26 @@
-﻿@model TranslationReg.Models.DocumentModel
+﻿@model TranslationRegistryModel.Document
 <div class="formContainer">
 
     @using (Html.BeginForm("Create", "Documents", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
+        @Html.HiddenFor(model => model.ProjectId)
+
         <div class="form-horizontal">
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
-                @Html.LabelFor(model => model.Document.Name, "Название", htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Name, "Название", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Document.Name, new { htmlAttributes = new { @class = "form-control" , required = "required "} })
-                    @Html.ValidationMessageFor(model => model.Document.Name, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Document.ProjectId, "Проект", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.DropDownListFor(model => Model.Document.ProjectId, Model.Projects, new { @class = "form-control", requred = "required" })
-                    @Html.ValidationMessageFor(model => model.Document.ProjectId, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", required = "required " } })
+                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
                 @Html.Label("Файл оригинала", new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    <input type="file" name="original" required = "required" />
+                    <input type="file" name="original" required="required" />
                 </div>
             </div>
 
