--- a/TranslationReg/Views/Projects/Edit.cshtml
+++ b/TranslationReg/Views/Projects/Edit.cshtml
@@ -14,11 +14,12 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.Project.Id)
     @Html.HiddenFor(model => model.Project.CreatorId)
+    @Html.HiddenFor(model => model.Project.Date)
 
     <div class="form-group">
         @Html.LabelFor(model => model.Project.Creator, "Создатель", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Project.Creator.Name, new { htmlAttributes = new { @class = "form-control", disabled = "disabled"} })
+            @Html.EditorFor(model => model.Project.Creator.Name, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
         </div>
     </div>
 
@@ -35,14 +36,6 @@
         <div class="col-md-10">
             @Html.DropDownListFor(model => model.Project.LanguagePairId, Model.LanguagePairs, new { @class = "form-control", requred = "required" })
             @Html.ValidationMessageFor(model => model.Project.LanguagePairId, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.Project.WordsNumber, "Количество слов", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Project.WordsNumber, new { htmlAttributes = new { @class = "form-control", requred = "required" } })
-            @Html.ValidationMessageFor(model => model.Project.WordsNumber, "", new { @class = "text-danger" })
         </div>
     </div>
 
