--- a/TranslationReg/Views/User_Stage/List.cshtml
+++ b/TranslationReg/Views/User_Stage/List.cshtml
@@ -2,9 +2,11 @@
 <div>
     <div class="titles">
         <div class="col-md-2">Пользователь</div>
-        <div class="col-md-2">Количество</div>
-        <div class="col-md-4">Дата загрузки</div>
-        <div class="col-md-4">Команды</div>
+        <div class="col-md-2">Комментарий</div>
+        <div class="col-md-1">Количество</div>
+        <div class="col-md-2">Дата назначения</div>
+        <div class="col-md-2">Дата загрузки</div>
+        <div class="col-md-3">Команды</div>
     </div>
 
     @foreach (var userStage in Model)
