--- a/TranslationReg/Views/User_Stage/Create.cshtml
+++ b/TranslationReg/Views/User_Stage/Create.cshtml
@@ -10,18 +10,26 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Amount,"Количество", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Amount, "Количество", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Amount, new { htmlAttributes = new { @class = "form-control", required="required", min = "1", max = "100000" } })
+                @Html.EditorFor(model => model.Amount, new { htmlAttributes = new { @class = "form-control", required = "required", min = "1", max = "100000" } })
                 @Html.ValidationMessageFor(model => model.Amount, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Comment, "Комментарий", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Comment, new { htmlAttributes = new { @class = "form-control"} })
+                @Html.ValidationMessageFor(model => model.Comment, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.Label("Прикрепить файл", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input type="file" name="workFile" required="required" />
-                @Html.ValidationMessageFor(model => model.DocFileId, "", new { @class = "text-danger"})
+                <input type="file" name="workFile"/>
+                @Html.ValidationMessageFor(model => model.DocFileId, "", new { @class = "text-danger" })
             </div>
         </div>
 
