--- a/TranslationReg/Views/User_Stage/Create.cshtml
+++ b/TranslationReg/Views/User_Stage/Create.cshtml
@@ -1,35 +1,43 @@
-﻿@model TranslationRegistryModel.User_Stage
+﻿@model TranslationReg.Models.User_StageModel
 
 <div class="formContainer">
     @using (Html.BeginForm("Create", "User_Stage", null, FormMethod.Post, new { enctype = "multipart/form-data" })) 
     {
-        @Html.HiddenFor(model=>model.StageId)
+        @Html.HiddenFor(model=>model.work.StageId)
         @Html.AntiForgeryToken()
         
     <div class="form-horizontal">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Amount, "Количество", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.work.UserId, "Пользователь", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Amount, new { htmlAttributes = new { @class = "form-control", required = "required", min = "1", max = "100000" } })
-                @Html.ValidationMessageFor(model => model.Amount, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model=> model.work.UserId, Model.usersSelectList, new { htmlAttributes = new { @class = "form-control", required = "required" }})
+                @Html.ValidationMessageFor(model => model.work.UserId, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Comment, "Комментарий", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.work.Amount, "Количество", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Comment, new { htmlAttributes = new { @class = "form-control"} })
-                @Html.ValidationMessageFor(model => model.Comment, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.work.Amount, new { htmlAttributes = new { @class = "form-control", required = "required", min = "1", max = "100000" } })
+                @Html.ValidationMessageFor(model => model.work.Amount, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.work.Comment, "Комментарий", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.work.Comment, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.work.Comment, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.Label("Прикрепить файл", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input type="file" name="workFile"/>
-                @Html.ValidationMessageFor(model => model.DocFileId, "", new { @class = "text-danger" })
+                <input type="file" name="workFile" />
+                @Html.ValidationMessageFor(model => model.work.DocFileId, "", new { @class = "text-danger" })
             </div>
         </div>
 
