вывод дат поправил, возможность назначать работу другим юзерам

--- a/TranslationReg/Views/Projects/List.cshtml
+++ b/TranslationReg/Views/Projects/List.cshtml
@@ -37,7 +37,7 @@
         </div>
         <div class="col-md-1">
             <span>
-                @Html.DisplayFor(modelItem => project.Date)
+                @project.Date.ToString("dd/MM/yyyy")
             </span>
         </div>
         <div class="col-md-3">
