--- a/TranslationReg/Views/User_Stage/Item.cshtml
+++ b/TranslationReg/Views/User_Stage/Item.cshtml
@@ -19,20 +19,23 @@
         </div>
         <div class="col-md-2">
             <span>
-                @Html.DisplayFor(modelItem => Model.Date)
+                @Model.Date.ToString("dd/MM/yyyy")
             </span>
         </div>
         <div class="col-md-2">
             <span>
-                @Html.DisplayFor(modelItem => Model.DocFile.Date)
+                @if (Model.DocFile!=null && Model.DocFile.Date!=null)
+                {
+                    @Model.DocFile.Date.ToString("dd/MM/yyyy")
+                }
             </span>
         </div>
         <div class="col-md-3">
             <div class="buttons-container">
                 @if (Model.DocFile != null && !String.IsNullOrWhiteSpace(Model.DocFile.Path))
-            {
-                @Html.ActionLink("Скачать", "Download", "User_Stage", new { @filepath = Model.DocFile.Path }, htmlAttributes: new { @class = "btn btn-primary" })
-        }
+                {
+                    @Html.ActionLink("Скачать", "Download", "User_Stage", new { @filepath = Model.DocFile.Path }, htmlAttributes: new { @class = "btn btn-primary" })
+                }
                 <a class="btn btn-info finaliseBtn" href="/User_Stage/Finalise/@Model.Id">Отметить финальным</a>
                 <a class="btn btn-danger deleteBtn" href="/User_Stage/Delete/@Model.Id" data-dialog-title="Удаление записи">Удалить</a>
             </div>
