--- a/TranslationReg/Views/Documents/List.cshtml
+++ b/TranslationReg/Views/Documents/List.cshtml
@@ -7,7 +7,8 @@
 <div class="titles">
     <div class="col-md-3">@Html.Label("Наименование")</div>
     <div class="col-md-2">@Html.Label("Создатель")</div>
-    <div class="col-md-2">@Html.Label("Количество слов")</div>
+    <div class="col-md-1">@Html.Label("Дата")</div>
+    <div class="col-md-1">@Html.Label("Слова")</div>
     <div class="col-md-1">@Html.Label("Оригинал")</div>
     <div class="col-md-1">@Html.Label("Перевод")</div>
     <div class="col-md-3">@Html.Label("Команды")</div>
@@ -27,7 +28,14 @@
             </span>
         </div>
 
-        <div class="col-md-2">
+
+        <div class="col-md-1">
+            <span>
+                @item.Date.ToString("dd/MM/yyyy")
+            </span>
+        </div>
+
+        <div class="col-md-1">
             <span>
                 @Html.DisplayFor(modelItem => item.WordsNumber)
             </span>
